# lab

./: bio.md
lab1/: bio.md  free_culture_writing.txt  golf app pitch.txt  lab1.md  two_suggestions.txt
lab10/: lab10.md
lab11/: lab11.md
lab2/: lab2.md
lab4/: lab4.md
lab5/: CMakeLists.txt  Makefile  Makefile.mk  directions.txt  lab5.md  mysqrt.cxx  tutorial.cxx
lab5/Step1/: CMakeLists.txt  directions.txt  tutorial.cxx
lab6/: bleh.py  follow_and_precede.py  lab6.md  lab6.py  lab6_4_letter.py  lab6_unordered.py  temp.py
lab7/: lab7.md
lab8/: lab8.md
lab9/: lab9.md
